added restriction on buttons and error messages on valid or not

--- a/src/app/about-admin/about-admin.component.css
+++ b/src/app/about-admin/about-admin.component.css
@@ -101,3 +101,11 @@
     flex-grow:0;
     justify-content:flex-end;
 }
+.addInputButton small{
+    display:block;
+}
+
+.smallWornings{
+    display:flex;
+    gap:2%;
+}
