--- a/src/app/academic-admin/academic-admin.component.html
+++ b/src/app/academic-admin/academic-admin.component.html
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <h2>Registration Form</h2>
     {{registrationForm.value | json}}
-    <form  [formGroup]="registrationForm" > 
+    <form  [formGroup]="registrationForm" (ngSubmit)="onSubmit()" > 
         <div class="form-group">
             <label>UserName</label>
             <input [class.is-invalid]="userName.invalid && registrationForm.get('userName').touched" 
@@ -20,13 +20,32 @@
                 <small *ngIf="registrationForm.get('userName').errors?.forbiddenName" class="text-danger">Username {{userName.errors?.forbiddenName.value}} is not acceptable</small>
             </div>
         </div>
+
+        <div class="form-group">
+            <label>Email:</label>
+            <button type="button" class="btn btn-secondary btn-sm m-2" (click)="addAlternateEmails()">Add e-mail</button>
+            <input type="email" formControlName="email" class="form-control" [class.is-invalid]="email.invalid && email.untouched">
+            <small class="text-danger" [class.d-none]="email.valid || email.untouched">Email is mandatory</small>
+            <div formArrayName="alternateEmails" *ngFor="let email of alternateEmails.controls; let i=index">
+                <input type="text" class="form-control my-1" [formControlName]="i">
+            </div>
+        </div>
+        <div class="form-check mb-3">
+            <input class="form-check-input" formControlName="subscribe" type="checkbox">
+            <label class="form-check-label">Send me promotional offers</label>
+        </div>
+
+
+
+
         <div class="form-group">
             <label>Password</label>
             <input type="password" class="form-control" formControlName="password">
         </div>
         <div class="form-group">
             <label>Confirm Password</label>
-            <input type="password" class="form-control" formControlName="confirmPassword">
+            <input type="password" class="form-control" formControlName="confirmPassword" [class.is-invalid]="registrationForm.errors?.misMatch">
+            <small *ngIf="registrationForm.errors?.misMatch" class="text-danger">password do not match</small>
         </div>
 <div formGroupName="address">
         <div class="form-group">
@@ -46,7 +65,7 @@
 
 
 
-        <button class="btn btn-primary" type="submit">Register</button>
+        <button [disabled]="!registrationForm.valid" class="btn btn-primary" type="submit">Register</button>
         <button class="btn btn-primary ml-2" type="button" (click)="loadApiData()">Load API data</button>
     </form>
     
