--- a/src/app/academic-admin/academic-admin.component.html
+++ b/src/app/academic-admin/academic-admin.component.html
@@ -10,7 +10,15 @@
     <form  [formGroup]="registrationForm" > 
         <div class="form-group">
             <label>UserName</label>
-            <input type="text" class="form-control" formControlName="userName">
+            <input [class.is-invalid]="userName.invalid && registrationForm.get('userName').touched" 
+            type="text" class="form-control" formControlName="userName">
+            <!--small class="text-danger" [class.d-none]="registrationForm.get('userName').valid || registrationForm.get('userName').untouched"
+            >Username is required</small-->
+            <div *ngIf="registrationForm.get('userName').invalid && registrationForm.get('userName').touched">
+                <small *ngIf="registrationForm.get('userName').errors?.required" class="text-danger">UserName is required</small>
+                <small *ngIf="registrationForm.get('userName').errors?.minlength" class="text-danger">Username must be at least 3 characters</small>
+                <small *ngIf="registrationForm.get('userName').errors?.forbiddenName" class="text-danger">Username {{userName.errors?.forbiddenName.value}} is not acceptable</small>
+            </div>
         </div>
         <div class="form-group">
             <label>Password</label>
